# autograde

./: .flake8  .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  README.rst  dummy.py  publish.sh  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy.yml  pythonapp.yml  tests.yml
autograde/: .__init__.py.un~  __init__.py  __main__.py  helpers.py  notebook_executor.py  notebook_test.py  test_result.py  util.py
autograde/backend/: __init__.py  base.py
autograde/backend/container/: __init__.py  common.py  docker.py  podman.py
autograde/backend/local/: __init__.py  audit.py  patch.py  report.py  summary.py  test.py  util.py
autograde/cli/: __init__.py  __main__.py  audit.py  build.py  patch.py  report.py  summary.py  test.py  util.py  version.py
autograde/static/: __init__.py  basic.css  inject_after.py  inject_before.py  style.css
autograde/templates/: __init__.py  audit.html  base.html  container.dockerfile  error.html  inject_after.py  inject_before.py  message.html  report.html  report.rst  results.html  source_view.html  summary.html
autograde/test/: test___main__.py  test_notebook_test.py  test_test_result.py  test_util.py  util.py
autograde/test/examples/: __init__.py  solution_c.ipynb
autograde/test/integration_tests/: test_workflow_examples.py
autograde/test/test_cli/: test_audit.py
autograde_test/: test___main__.py  test_notebook_test.py  test_test_result.py  test_util.py  util.py
autograde_test/examples/: test_1.py
data/: notebook.ipynb  test.py
data/context/: data.txt
demo/: notebook.ipynb  test.py
demo/context/: bar.txt  foo.txt
test/: test___main__.py  test_helpers.py  test_notebook_executor.py  test_notebook_test.py  test_util.py
test/examples/: solution_a.ipynb  solution_c.ipynb  test_1.py  test_2.py
tests/: test_helpers.py  test_notebook_executor.py  test_notebook_test.py  test_test_result.py  test_util.py  util.py
tests/backend/: test_backend.py
tests/backend/container/: config.py  test_docker.py  test_podman.py
tests/backend/local/: test_audit.py  test_util.py
tests/examples/: solution_b.ipynb  solution_c.ipynb
tests/integration_tests/: test_workflow_examples.py
tests/test_cli/: test_audit.py  test_patch.py  test_report.py  test_summary.py  test_test.py  test_util.py  test_version.py
