[tool.poetry]
name = "jupyter-autograde"
version = "0.2.7"
description = "Unittesting & Grading of Jupyter Notebooks"
authors = ["Lukas Ochse"]
maintainers = ["Chair for Computational Social Sciences and Humanities at RWTH Aachen University"]
readme = "README.rst"
repository = "https://github.com/cssh-rwth/autograde"
keywords = ["jupyter", "notebook", "testing", "grading"]
license = "MIT"
packages = [
    { include = "autograde" },
]
include = [
    "autograde/templates/*",
    "autograde/static/*",
    "demo/*",
    "demo/context/*",
    "Dockerfile",
    "dummy.py",
    ".flake8"
]

[tool.poetry.scripts]
autograde = "autograde.cli.__main__:cli"

[tool.poetry.dependencies]
python = "^3.8"
dataclasses-json = "^0.5"
numpy = "~1.20"
scipy = "~1.6"
pandas = "~1.2"
matplotlib = "~3.3"
seaborn = "~0.11"
ipykernel = "~5.4"
jupyter = "~1.0"
Jinja2 = "~2.11"
Flask = "~1.1"
django-htmlmin-ajax = "~0.11"

[tool.poetry.dev-dependencies]
flake8 = "~3.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
